Fix #35342: multisample antialiasing makes tooltips look blurry.